feat(rumap): add className props in constructor

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             min-height: 200px;
             margin: 0;
         }
+        .test_class_for_tooltip {
+            color: white;
+            background-color: black;
+            padding: 4px 8px;
+            border-radius: 4px;
+        }
     </style>
 </head>
 <body>
